--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "axios": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
     "typescript": "^5.0.4"
   },
