--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.28.14",
     "axios": "^1.4.0"
   },
   "devDependencies": {
+    "@sinclair/typebox": "^0.28.14",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
     "esbuild-jest": "^0.5.0",
@@ -25,6 +25,9 @@
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "@sinclair/typebox": "^0.28.14"
   },
   "files": [
     "dist/*"
