--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@sinclair/typebox": "^0.28.14"
+    "@sinclair/typebox": "^0.28.14",
+    "zod": "^3.22.4"
   },
   "files": [
     "dist/*"
