feat: accept okCode

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "peerDependencies": {
     "@sinclair/typebox": "^0.28.14",
-    "zod": "3.x"
+    "zod": "3.x",
+    "axios": "^1.4.0"
   },
   "files": [
     "dist/*"
