--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ts-fastify-client",
-  "repository": "https://github.com/flodlc/typebox-client.git",
+  "name": "http-wizard",
+  "repository": "https://github.com/flodlc/http-wizard.git",
   "author": "flodlc <f.delacomble@gmail.com>",
   "license": "MIT",
   "main": "./dist/index.js",
