--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.1",
     "axios": "^1.4.0"
   },
   "devDependencies": {
-    "@sinclair/typebox": "^0.28.14",
+    "@sinclair/typebox": "^0.31.23",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
     "esbuild-jest": "^0.5.0",
@@ -28,7 +29,7 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@sinclair/typebox": "^0.28.14",
+    "@sinclair/typebox": "^0.29.0",
     "axios": "^1.4.0",
     "zod": "3.x"
   },
