--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-wizard",
+  "name": "@http-wizard/react-query",
   "repository": "https://github.com/flodlc/http-wizard.git",
   "author": "flodlc <f.delacomble@gmail.com>",
   "license": "MIT",
@@ -7,21 +7,27 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.9-beta.7",
+  "version": "1.3.9-beta.12",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "@sinclair/typebox": "^0.29.0",
+    "@tanstack/react-query": "^5.8.1",
+    "axios": "^1.4.0",
+    "http-wizard": "1.3.9-beta.7",
+    "zod": "3.x"
   },
   "devDependencies": {
     "@sinclair/typebox": "^0.31.23",
     "@tanstack/react-query": "^5.8.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
+    "axios": "^1.4.0",
     "esbuild-jest": "^0.5.0",
+    "http-wizard": "1.3.9-beta.7",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
@@ -32,6 +38,7 @@
     "@sinclair/typebox": "^0.29.0",
     "@tanstack/react-query": "^5.8.1",
     "axios": "^1.4.0",
+    "http-wizard": "1.3.9-beta.7",
     "zod": "3.x"
   },
   "files": [
@@ -52,6 +59,7 @@
     "client",
     "api",
     "node",
-    "js"
+    "js",
+    "react-query"
   ]
 }
