--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-wizard",
+  "name": "@http-wizard/core",
   "repository": "https://github.com/flodlc/http-wizard.git",
   "author": "flodlc <f.delacomble@gmail.com>",
   "license": "MIT",
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.9-beta.7",
+  "version": "1.3.9",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
