--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.9-beta.12",
+  "version": "1.3.9",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
@@ -17,7 +17,6 @@
     "@sinclair/typebox": "^0.29.0",
     "@tanstack/react-query": "^5.8.1",
     "axios": "^1.4.0",
-    "http-wizard": "1.3.9-beta.7",
     "zod": "3.x"
   },
   "devDependencies": {
@@ -27,7 +26,7 @@
     "@types/node": "^18.7.16",
     "axios": "^1.4.0",
     "esbuild-jest": "^0.5.0",
-    "http-wizard": "1.3.9-beta.7",
+    "http-wizard": "1.3.9",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
@@ -38,7 +37,7 @@
     "@sinclair/typebox": "^0.29.0",
     "@tanstack/react-query": "^5.8.1",
     "axios": "^1.4.0",
-    "http-wizard": "1.3.9-beta.7",
+    "http-wizard": "1.3.9",
     "zod": "3.x"
   },
   "files": [
