--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -7,17 +7,14 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.29.0",
-    "@tanstack/react-query": "^5.8.1",
-    "axios": "^1.4.0",
-    "zod": "3.x"
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@sinclair/typebox": "^0.31.23",
@@ -26,7 +23,7 @@
     "@types/node": "^18.7.16",
     "axios": "^1.4.0",
     "esbuild-jest": "^0.5.0",
-    "http-wizard": "1.3.9",
+    "http-wizard": "1.3.10",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
@@ -35,9 +32,8 @@
   },
   "peerDependencies": {
     "@sinclair/typebox": "^0.29.0",
-    "@tanstack/react-query": "^5.8.1",
-    "axios": "^1.4.0",
-    "http-wizard": "1.3.9",
+    "@tanstack/react-query": "5.x",
+    "http-wizard": "1.3.10",
     "zod": "3.x"
   },
   "files": [
