--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.12",
+  "version": "1.3.14",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
@@ -29,10 +29,7 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@sinclair/typebox": "^0.29.0",
-    "@tanstack/react-query": "^5.8.1",
-    "axios": "^1.4.0",
-    "zod": "3.x"
+    "axios": "^1.4.0"
   },
   "files": [
     "dist/*"
