--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -7,23 +7,20 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.12",
+  "version": "1.3.14",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
-  "dependencies": {
-    "axios": "^1.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@sinclair/typebox": "^0.31.23",
     "@tanstack/react-query": "^5.8.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
-    "axios": "^1.4.0",
     "esbuild-jest": "^0.5.0",
-    "http-wizard": "1.3.11",
+    "@http-wizard/core": "1.3.13",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
@@ -31,10 +28,8 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@sinclair/typebox": "^0.29.0",
     "@tanstack/react-query": "5.x",
-    "http-wizard": "1.3.11",
-    "zod": "3.x"
+    "@http-wizard/core": "1.3.13"
   },
   "files": [
     "dist/*"
