--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,15 +7,13 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.15",
+  "version": "1.3.16",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
-  "dependencies": {
-    "axios": "^1.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@sinclair/typebox": "^0.31.23",
     "@tanstack/react-query": "^5.8.1",
