--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,13 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "simple-import-sort"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "simple-import-sort",
+    "import",
+    "unused-imports"
+  ],
   "rules": {
     "simple-import-sort/imports": "error",
     "react/react-in-jsx-scope": "off",
@@ -24,9 +30,25 @@
     "react/display-name": 0,
     "@typescript-eslint/ban-ts-comment": "off",
     "react/prop-types": "off",
-    "(@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "prefer-const": "error"
+    "@typescript-eslint/no-empty-interface": "off",
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/no-var-requires": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "import/no-useless-path-segments": ["error"],
+    "import/no-duplicates": ["error", { "considerQueryString": true }],
+    "import/no-unassigned-import": ["off"],
+    "import/newline-after-import": ["error", { "count": 1 }]
   },
   "settings": {
     "react": {
