--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
   "version": "1.3.16",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
+    "typecheck": "tsc",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
