--- a/packages/react-query/tsconfig.json
+++ b/packages/react-query/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */,
     "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
