--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,19 +7,19 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.16",
+  "version": "1.3.20",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "typecheck": "tsc",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
   },
-  "dependencies": {},
   "devDependencies": {
     "@sinclair/typebox": "^0.31.23",
     "@tanstack/react-query": "^5.8.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
+    "axios": "^1.4.0",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
