--- a/packages/react-query/package.json
+++ b/packages/react-query/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "module": "./dist/index.mjs",
   "packageManager": "yarn@3.2.1",
-  "version": "1.3.16",
+  "version": "1.3.20",
   "scripts": {
     "dev": "tsup src/index.ts --watch",
     "typecheck": "tsc",
@@ -21,16 +21,17 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^18.7.16",
     "esbuild-jest": "^0.5.0",
-    "@http-wizard/core": "1.3.16",
+    "@http-wizard/core": "1.3.20",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "tsup": "^6.2.3",
     "typescript": "^5.0.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "axios": "^1.4.0"
   },
   "peerDependencies": {
     "@tanstack/react-query": "5.x",
-    "@http-wizard/core": "1.3.16"
+    "@http-wizard/core": "1.3.20"
   },
   "files": [
     "dist/*"
