--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   "packageManager": "yarn@3.2.1",
   "version": "1.3.20",
   "scripts": {
-    "dev": "tsup src/index.ts --watch",
+    "dev": "tsup src/index.ts --watch --onSuccess 'node --enable-source-maps dist/index.js'",
     "typecheck": "tsc",
     "build": "tsup src/index.ts --dts",
     "test": "jest"
